# SRML_Counter

./: README.md
getset/: Cargo.toml  README.md
getset/runtime/: Cargo.toml
getset/runtime/src/: demo.rs  lib.rs
getset/runtime/wasm/: Cargo.toml  build.sh
getset/runtime/wasm/src/: lib.rs
getset/src/: chain_spec.rs  main.rs  service.rs
